--- a/app.json
+++ b/app.json
@@ -4,10 +4,10 @@
     "slug": "poster",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./images/logoapp.jpg",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./images/logoapp.jpg",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -18,13 +18,25 @@
       "supportsTablet": true
     },
     "android": {
+      "googleServicesFile": "google-services.json",
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./images/logoapp.jpg",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "CAMERA_ROLL",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE"
+      ],
+      "package": "com.justariel.poster"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./images/logoapp.jpg"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "56ad9850-4f7e-40c8-aff7-42957dba0b46"
+      }
     }
   }
 }
